--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 01 18:50:37 CET 2017
-ndk.dir=G\:\\Android\\sdk\\ndk-bundle
-sdk.dir=G\:\\Android\\sdk
+#Thu Mar 02 14:47:19 CET 2017
+ndk.dir=C\:\\Development\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Development\\Android\\sdk
