--- a/service-tree-fragment-example/src/main/AndroidManifest.xml
+++ b/service-tree-fragment-example/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zhuinden.servicetreefragmentexample">
 
     <application
+        android:name=".injection.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
