--- a/service-tree-navigator-example/build.gradle
+++ b/service-tree-navigator-example/build.gradle
@@ -29,9 +29,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':service-tree')
-    compile('com.github.Zhuinden:navigator:0.1.4', {
-        exclude group: 'com.github.Zhuinden', module: 'service-tree'
-    })
+    compile 'com.github.Zhuinden:navigator:0.1.5'
 
     apt 'frankiesardo:auto-parcel:1.0.3'
 
