--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 26 16:20:42 CEST 2017
-ndk.dir=C\:\\Development\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Development\\Android\\sdk
+#Sat May 06 22:01:45 CEST 2017
+ndk.dir=G\:\\Android\\sdk\\ndk-bundle
+sdk.dir=G\:\\Android\\sdk
